# CrewAI_Agents

./: README.md  main.py  pyproject.toml
financial_analyst_crew/: crew.py  financial_analyst.py
financial_analyst_crew/config/: agents.yaml  tasks.yaml
