[tool.poetry]
name = "financial_analyst_crew"
version = "0.1.0"
description = "financial_analyst_crew using crewAI"
authors = ["Tony Curtis <tcurtis45@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {extras = ["tools"], version = "^0.22.2"}

[tool.poetry.scripts]
financial_analyst_crew = "financial_analyst_crew.financial_analyst:run_crew"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
